[gd_scene load_steps=14 format=3 uid="uid://b7n5dl1juxu7t"]

[ext_resource type="PackedScene" uid="uid://blorwsk7msxwu" path="res://Scenes/entity.tscn" id="1_gn3r3"]
[ext_resource type="Script" path="res://Scenes/rabbit.gd" id="2_pnegx"]
[ext_resource type="Texture2D" uid="uid://hhink6swwtu1" path="res://Sprites/Rabbit3.png" id="3_lvk3f"]
[ext_resource type="AudioStream" uid="uid://bwtt7bxnsll3j" path="res://Sounds/RabbitDies.wav" id="5_ihyya"]
[ext_resource type="PackedScene" uid="uid://b5l7nm22qv6uc" path="res://Scenes/interaction_area.tscn" id="5_kb7ra"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eev5y"]
size = Vector2(20, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_74orf"]
atlas = ExtResource("3_lvk3f")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhumh"]
atlas = ExtResource("3_lvk3f")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_skqay"]
atlas = ExtResource("3_lvk3f")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j52kq"]
atlas = ExtResource("3_lvk3f")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_386pj"]
atlas = ExtResource("3_lvk3f")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jgetm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_74orf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhumh")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_skqay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j52kq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_386pj")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_uk3hp"]
radius = 16.0312

[node name="Rabbit" instance=ExtResource("1_gn3r3")]
collision_layer = 4
collision_mask = 21
script = ExtResource("2_pnegx")
gravity = 600
terminal_velocity = 500

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_eev5y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="2"]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_jgetm")
animation = &"run"
autoplay = "run"

[node name="FloorRays" type="Node2D" parent="." index="3"]

[node name="Right" type="RayCast2D" parent="FloorRays" index="0"]
target_position = Vector2(20, 20)

[node name="Left" type="RayCast2D" parent="FloorRays" index="1"]
target_position = Vector2(-20, 20)

[node name="WallRays" type="Node2D" parent="." index="4"]

[node name="Right" type="RayCast2D" parent="WallRays" index="0"]
target_position = Vector2(15, 0)
collision_mask = 5

[node name="Left" type="RayCast2D" parent="WallRays" index="1"]
target_position = Vector2(-15, 0)
collision_mask = 5

[node name="InteractionArea" parent="." index="5" instance=ExtResource("5_kb7ra")]
action_name = "pick up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea" index="0"]
position = Vector2(3, 0)
shape = SubResource("CircleShape2D_uk3hp")

[node name="Death" type="AudioStreamPlayer2D" parent="Sound" index="1"]
stream = ExtResource("5_ihyya")
bus = &"SFX"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
